--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </footer>
   </div>
 
-  <script src="script.js"></script>
+  <div class="wave" id="wave"></div>
+  <script src="linktree.js"></script>
 </body>
 </html>
