--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   </div>
 
   <div class="wave" id="wave"></div>
-  <script src="linktree.js"></script>
+  <script src="lin.js"></script>
 </body>
 </html>
