--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
   <div class="linktree-container">
     <img src="https://res.cloudinary.com/startup-grind/image/fetch/c_scale,w_2560/c_crop,h_650,w_2560,y_0.0_mul_h_sub_0.0_mul_650/c_crop,h_650,w_2560/c_fill,dpr_2.0,f_auto,g_center,q_auto:good/https://res.cloudinary.com/startup-grind/image/upload/c_fill%2Cdpr_2.0%2Cf_auto%2Cg_center%2Cq_auto:good/v1/gcs/platform-data-goog/chapter_banners/Screenshot%2520%2528469%2529_wyOxGKJ.png" alt="Profile Image" class="profile-img">
-    <h1 class="username">@gdsc_AITD</h1>
+    <h1 class="username">GDG On Campus Dr. AITD</h1>
     <h1 class="username">The official chapter of Google Developer Student Club in AITD Kanpur</h1>
     
     <div class="links">
