--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
 
         <div class="link-list">
-            <a href="https://your-link1.com" class="link-item">
+            <a href="https://gdg.community.dev/gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india/" class="link-item">
                 <img src="https://ugc.production.linktr.ee/dl0dMCm2TnyWBLCk4KBN_vnGhPDd193hl12AT?io=true&size=avatar-v3_0" alt="GDSC Icon">
                 <span>GDG - AITD</span>
             </a>
@@ -31,15 +31,15 @@
                 <img src="https://th.bing.com/th?id=ODLS.6322929e-2133-493d-8aa7-380e4e8f4531&w=32&h=32&qlt=96&pcl=fffffa&o=6&pid=1.2" alt="Instagram Icon">
                 <span>Build with AI</span>
             </a>
-            <a href="https://your-linkedin-link.com" class="link-item">
+            <a href="https://in.linkedin.com/company/gdsc-dr-aith" class="link-item">
                 <img src="https://th.bing.com/th?id=ODLS.fc619bab-a786-4b75-8669-6881202d98da&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="LinkedIn Icon">
                 <span>LinkedIn</span>
             </a>
-            <a href="https://your-youtube-link.com" class="link-item">
+            <a href="https://www.instagram.com/gdg_aitd/profilecard/?igsh=MWdzOGl6MzMybWh4dg==" class="link-item">
                 <img src="https://th.bing.com/th?id=ODLS.673e3827-800e-44f1-8900-24dfdabec7e3&w=18&h=18&o=6&pid=1.2" alt="YouTube Icon">
                 <span>Instagram</span>
             </a>
-            <a href="https://your-youtube-link.com" class="link-item">
+            <a href="https://www.twitter.com/Gdsc_DrAith" class="link-item">
               <img src="https://th.bing.com/th?id=ODLS.4dcff697-993c-4ff3-be0c-84f964afc3a9&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="YouTube Icon">
               <span>Twitter</span>
           </a>
