--- a/index.html
+++ b/index.html
@@ -16,33 +16,38 @@
 
         <div class="link-list">
             <a href="https://gdg.community.dev/gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india/" class="link-item">
-                <img src="https://ugc.production.linktr.ee/dl0dMCm2TnyWBLCk4KBN_vnGhPDd193hl12AT?io=true&size=avatar-v3_0" alt="GDG Icon">
+                <img src="https://ugc.production.linktr.ee/dl0dMCm2TnyWBLCk4KBN_vnGhPDd193hl12AT?io=true&size=avatar-v3_0" alt="GDSC Icon">
                 <span>GDG - AITD</span>
             </a>
             <a href="https://gdg.community.dev/events/details/google-gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india-presents-gdg-info-session-your-path-to-tech-success/" class="link-item">
-                <img src="https://th.bing.com/th?id=ODLS.019faf6f-ab0e-42a2-a7ec-83cea8b916cb&w=32&h=32&qlt=95&pcl=fffffa&o=6&pid=1.2" alt="Info Session">
+                <img src="https://th.bing.com/th?id=ODLS.019faf6f-ab0e-42a2-a7ec-83cea8b916cb&w=32&h=32&qlt=95&pcl=fffffa&o=6&pid=1.2" alt="Icon">
                 <span>Info Session</span>
             </a>
             <a href="https://gdg.community.dev/events/details/google-gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india-presents-open-source-made-easy-how-to-contribute-with-gssoc/cohost-gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india " class="link-item">
-                <img src="https://th.bing.com/th?id=ODLS.b2344597-0e26-45d6-bbc1-592fe8049812&w=32&h=32&qlt=98&pcl=fffffa&o=6&pid=1.2" alt="Open Source Made Easy">
+                <img src="https://th.bing.com/th?id=ODLS.b2344597-0e26-45d6-bbc1-592fe8049812&w=32&h=32&qlt=98&pcl=fffffa&o=6&pid=1.2" alt="Discord Icon">
                 <span>Open Source Made Easy</span>
             </a>
             <a href="https://gdg.community.dev/events/details/google-gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india-presents-build-with-ai/" class="link-item">
-                <img src="https://th.bing.com/th?id=ODLS.6322929e-2133-493d-8aa7-380e4e8f4531&w=32&h=32&qlt=96&pcl=fffffa&o=6&pid=1.2" alt="Build with AI">
+                <img src="https://th.bing.com/th?id=ODLS.6322929e-2133-493d-8aa7-380e4e8f4531&w=32&h=32&qlt=96&pcl=fffffa&o=6&pid=1.2" alt="Instagram Icon">
                 <span>Build with AI</span>
             </a>
             <a href="https://in.linkedin.com/company/gdsc-dr-aith" class="link-item">
-                <img src="https://th.bing.com/th?id=ODLS.fc619bab-a786-4b75-8669-6881202d98da&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="LinkedIn">
+                <img src="https://th.bing.com/th?id=ODLS.fc619bab-a786-4b75-8669-6881202d98da&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="LinkedIn Icon">
                 <span>LinkedIn</span>
             </a>
             <a href="https://www.instagram.com/gdg_aitd/profilecard/?igsh=MWdzOGl6MzMybWh4dg==" class="link-item">
-                <img src="https://th.bing.com/th?id=ODLS.673e3827-800e-44f1-8900-24dfdabec7e3&w=18&h=18&o=6&pid=1.2" alt="Instagram">
+                <img src="https://th.bing.com/th?id=ODLS.673e3827-800e-44f1-8900-24dfdabec7e3&w=18&h=18&o=6&pid=1.2" alt="YouTube Icon">
                 <span>Instagram</span>
             </a>
             <a href="https://www.twitter.com/Gdsc_DrAith" class="link-item">
-              <img src="https://th.bing.com/th?id=ODLS.4dcff697-993c-4ff3-be0c-84f964afc3a9&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="twitter">
+              <img src="https://th.bing.com/th?id=ODLS.4dcff697-993c-4ff3-be0c-84f964afc3a9&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="YouTube Icon">
               <span>Twitter</span>
           </a>
+          <a  href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=akhilsrivastava801@gmail.com" target="_blank"class="link-item">
+            <img src="https://th.bing.com/th?id=ODLS.112e55dc-4008-476c-bb39-88b4f8adb808&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="YouTube Icon">
+            <span>Gmail</span>
+        </a>
+        
           <footer>
             <p id="foot">Follow us on social media!</p>
           </footer>
