--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="https://res.cloudinary.com/startup-grind/image/fetch/c_scale,w_2560/c_crop,h_650,w_2560,y_0.0_mul_h_sub_0.0_mul_650/c_crop,h_650,w_2560/c_fill,dpr_2.0,f_auto,g_center,q_auto:good/https://res.cloudinary.com/startup-grind/image/upload/c_fill%2Cdpr_2.0%2Cf_auto%2Cg_center%2Cq_auto:good/v1/gcs/platform-data-goog/chapter_banners/Screenshot%2520%2528469%2529_wyOxGKJ.png" alt="Profile Image" class="profile-img">
-            <h1 class="title">Google Developer Groups on Campus Dr.AITD</h1>
-            <h2 class="title">LEARN | CONNECT | GROW</h2>
+            <img src="https://res.cloudinary.com/startup-grind/image/fetch/c_scale,w_2560/c_crop,h_650,w_2560,y_0.0_mul_h_sub_0.0_mul_650/c_crop,h_650,w_2560/c_fill,dpr_2.0,f_auto,g_center,q_auto:good/https://res.cloudinary.com/startup-grind/image/upload/c_fill%2Cdpr_2.0%2Cf_auto%2Cg_center%2Cq_auto:good/v1/gcs/platform-data-goog/chapter_banners/Screenshot%2520%2528469%2529_wyOxGKJ.png" alt="Profile Image" class="profile-img animate-fade-in">
+            <h1 class="title animate-slide-in">Google Developer Groups on Campus Dr.AITD</h1>
+            <h2 class="title animate-slide-in">LEARN | CONNECT | GROW</h2>
         </header>
 
-        <div class="link-list">
+        <div class="link-list animate-bounce-in">
             <a href="https://gdg.community.dev/gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india/" class="link-item">
                 <img src="https://ugc.production.linktr.ee/dl0dMCm2TnyWBLCk4KBN_vnGhPDd193hl12AT?io=true&size=avatar-v3_0" alt="GDSC Icon">
                 <span>GDG - AITD</span>
@@ -53,6 +53,5 @@
           </footer>
         </div>
     </div>
-    
 </body>
 </html>
