--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
               <img src="https://th.bing.com/th?id=ODLS.4dcff697-993c-4ff3-be0c-84f964afc3a9&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="YouTube Icon">
               <span>Twitter</span>
           </a>
-          <a  href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=akhilsrivastava801@gmail.com" target="_blank"class="link-item">
-            <img src="https://th.bing.com/th?id=ODLS.112e55dc-4008-476c-bb39-88b4f8adb808&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="YouTube Icon">
-            <span>Gmail</span>
-        </a>
+          <a href=" mailto: akhilsrivastava801@gmail.com" class="link-item" onclick="handleClick('')"
+        target="_blank">
+          <img src="gmail.webp" width="20px" class="logo"/>
+             <span>Gmail</span>
+          </a
         
           <footer>
             <p id="foot">Follow us on social media!</p>
