--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Developer Groups on Campus DR.AITD</title>
     <link rel="stylesheet" href="linktree.css">
+    <!-- Disable Right Click and View Source -->
+    <script>
+        document.addEventListener("contextmenu", function(e) {
+            e.preventDefault();
+        });
+        document.onkeydown = function(e) {
+            if (e.keyCode == 123 || (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) || (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) || (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0))) {
+                return false;
+            }
+        };
+    </script>
 </head>
 <body>
     <div class="container">
@@ -23,7 +34,7 @@
                 <img src="https://th.bing.com/th?id=ODLS.019faf6f-ab0e-42a2-a7ec-83cea8b916cb&w=32&h=32&qlt=95&pcl=fffffa&o=6&pid=1.2" alt="Icon">
                 <span>Info Session</span>
             </a>
-            <a href="https://gdg.community.dev/events/details/google-gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india-presents-open-source-made-easy-how-to-contribute-with-gssoc/cohost-gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india " class="link-item">
+            <a href="https://gdg.community.dev/events/details/google-gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india-presents-open-source-made-easy-how-to-contribute-with-gssoc/cohost-gdg-on-campus-dr-ambedkar-institute-of-technology-for-handicapped-kanpur-india" class="link-item">
                 <img src="https://th.bing.com/th?id=ODLS.b2344597-0e26-45d6-bbc1-592fe8049812&w=32&h=32&qlt=98&pcl=fffffa&o=6&pid=1.2" alt="Discord Icon">
                 <span>Open Source Made Easy</span>
             </a>
@@ -46,7 +57,7 @@
           <a href=" mailto: akhilsrivastava801@gmail.com" class="link-item" onclick="handleClick('')" target="_blank">
               <img src="https://th.bing.com/th?id=ODLS.112e55dc-4008-476c-bb39-88b4f8adb808&w=32&h=32&qlt=90&pcl=fffffa&o=6&pid=1.2" alt="YouTube Icon">
               <span>Gmail</span>
-          </a
+          </a>
         
           <footer>
             <p id="foot">Follow us on social media!</p>
